--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=0.45"/>
-  <title>末日控制中心 - 正式版v.1.124 resource pickup update</title>
+  <title>末日控制中心 - 正式版v.1.122 resource pickup update</title>
   <style>
 
     .modal-overlay {
@@ -4666,6 +4666,16 @@ function triggerT80Cannon() {
         amount: () => Math.floor(Math.random()*76) - 25,
         targets:  { self:0.3, one:0.4, all:0.3 }
       }},
+	  { src: "images/zombie_search_sprite_pkm_msu.png", unlock: "鋼鐵尸流",
+		combat: {
+		pvp: { hit:-0.1, dmgMax:0.1, hp:0.2, dmgTaken:-0.3 },
+		pve: { hit:-0.2, dmgMax:0.2, hp:0.4, dmgTaken:-0.6 }
+	  },
+      heal: {
+        interval: 15000,
+        amount:   (maxHp) => Math.ceil(maxHp * 0.02),
+        targets:  { self:1, one:0.0, all:0 }
+      }},
 	  { src: "images/zombie_search_sprite_doctor.png", unlock: "不要打針",
 		combat: {
 		pvp: { hit:-0.5, dmgMax:-0.5, hp:-0.25, dmgTaken:0.5 },
@@ -4681,9 +4691,13 @@ function triggerT80Cannon() {
 		pvp: { hit:-0.1, dmgMax:0, hp:-0.2, dmgTaken:-0.1 },
 		pve: { hit:-0.2, dmgMax:0, hp:-0.4, dmgTaken:-0.2 }
 	  },
+	  heal: {
+        interval: 30000,
+        amount: (maxHp) => Math.ceil(maxHp * 0.1),
+        targets:  { self:0, one:0, all:1 }
+      },
       btrBonus: {
-      interval: 3000,
-	  healPct:  0.05
+      interval: 3000
       }},
     ];
     const btrSpriteOptions = [
@@ -6066,10 +6080,16 @@ function triggerT80Cannon() {
 	function startBattleBTRSpecialAttack() {
 	  if (!battleModeActive || battleEnded || !battleMatched) return;
 	  if (battleBTRInterval) clearInterval(battleBTRInterval);
-	  triggerBattleBTRSpecialAttack();
-	  battleBTRInterval = setInterval(() => {
+	  var opt = window.zombieSpriteOptions.find(function(o) {
+      return o.src === window.currentZombieSprite;
+	  }) || {};
+	  var interval = 5000;
+	  if (opt.btrBonus && typeof opt.btrBonus.interval === 'number') {
+		interval = opt.btrBonus.interval;
+	  }
+	  battleBTRInterval = setInterval(function() {
 		triggerBattleBTRSpecialAttack();
-	  }, 5000);
+	  }, interval);
 	}
 
 	function triggerBattleBTRSpecialAttack() {
@@ -7848,25 +7868,6 @@ function triggerT80Cannon() {
 	  selfAnim.appendChild(btrWrapper);	  
 
 	  battleBTRActive = true;	  
-	  
-	  var opt = window.zombieSpriteOptions.find(function(o) {
-		return o.src === window.currentZombieSprite;
-	  }) || {};
-	  if (opt.btrBonus && currentBattleRoomRef) {
-		var healAmt = Math.ceil(playerMaxHp * opt.btrBonus.healPct);
-		['userA','userB'].forEach(function(role) {
-		  currentBattleRoomRef.child(role).transaction(function(data) {
-			if (!data || data.isDown) return data;
-			data.health = Math.min(data.maxHp, (data.health||0) + healAmt);
-			return data;
-		  });
-		});
-		appendBattleLogEntry({
-		  sender:     '系統',
-		  senderRole: 'system',
-		  message:    'BTR 支援回血：全隊 +' + healAmt + ' HP'
-		});
-	  }
 
 	  startBtrSpecialAttack();	  
 	  if (useT80) {
@@ -7950,8 +7951,6 @@ function triggerT80Cannon() {
 	function startBtrSpecialAttack() {
 	  if (pveEnded || playerIsDown) return;
 	  if (battleBTRInterval) clearInterval(battleBTRInterval);
-	  triggerBtrSpecialAttack();
-
 	  var opt = window.zombieSpriteOptions.find(function(o) {
 		return o.src === window.currentZombieSprite;
 	  }) || {};
@@ -7959,7 +7958,6 @@ function triggerT80Cannon() {
 	  if (opt.btrBonus && typeof opt.btrBonus.interval === 'number') {
 		interval = opt.btrBonus.interval;
 	  }
-
 	  battleBTRInterval = setInterval(function() {
 		if (!pveEnded && !playerIsDown && battleBTRActive) {
 		  triggerBtrSpecialAttack();
