--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=0.45"/>
-  <title>末日控制中心 - 正式版v.1.122 resource pickup update</title>
+  <title>末日控制中心 - 正式版v.1.124 resource pickup update</title>
   <style>
 
     .modal-overlay {
@@ -4556,14 +4556,100 @@ function triggerT80Cannon() {
 		  }
 		}
 
-		const TICK_MS=5000,CHUNK_PER_FRAME=50;
-		let lastTs=performance.now(),inCatchUp=false,catchUpQueue=0,queuedRuns=0,tickCounter=0,btrExpireTick=0;
-		const _origAddEventLog=window.addEventLog,_origTriggerZombieEntry=window.triggerZombieEntry,_origTriggerZombieLying=window.triggerZombieLying,_origProductionAccident=window.triggerProductionAccident,_origUpdateAllDisplays=window.updateAllDisplays,_origUpdateModalContents=window.updateModalContents;
-		window.addEventLog=(msg,rarity,type,apply)=>{if(inCatchUp)return;_origAddEventLog(msg,rarity,type,apply);};
-		function suppressSideEffects(){window.triggerZombieEntry=()=>{};window.triggerZombieLying=()=>{};window.triggerProductionAccident=()=>{};window.updateAllDisplays=()=>{};window.updateModalContents=()=>{};}
-		function restoreSideEffects(){window.triggerZombieEntry=_origTriggerZombieEntry;window.triggerZombieLying=_origTriggerZombieLying;window.triggerProductionAccident=_origProductionAccident;window.updateAllDisplays=_origUpdateAllDisplays;window.updateModalContents=_origUpdateModalContents;}
-		function gameTick(){tickCounter++;if(tickCounter%6===0){const garages=gameState.buildings.filter(b=>b&&b.type.toLowerCase()==="armoredgarage");if(garages.length){const info=BUILDINGS.armoredGarage.getUpgradeInfo(garages[0].level);if(Math.random()<info.effect.btrChance){btrExpireTick=tickCounter+2;if(!inCatchUp)triggerBTRAnimation();}}}isBTRActive=tickCounter<=btrExpireTick;checkAchievements();produceResources('farming','food',1.7*TICK_MS/1000);produceResources('recycling','materials',0.5*TICK_MS/1000);produceResources('research','tech',0.2*TICK_MS/1000);produceWeaponsFromArmories();produceZombies();updateFoodConsumption();updateSafetyCenterConsumption();updateBarracksWeaponConsumption();if(gameState.allocations.exploration>0)handleExploration();updateAllDisplays();}
-		function rafBatchLoop(now){const delta=now-lastTs;if(delta>=TICK_MS&&!inCatchUp){const missed=Math.floor(delta/TICK_MS);lastTs+=missed*TICK_MS;gameTick();if(missed>1){inCatchUp=true;catchUpQueue=queuedRuns=missed-1;}}if(inCatchUp){suppressSideEffects();const runs=Math.min(catchUpQueue,CHUNK_PER_FRAME);for(let i=0;i<runs;i++)gameTick();catchUpQueue-=runs;if(catchUpQueue===0){inCatchUp=false;restoreSideEffects();updateAllDisplays();window.addEventLog(`補跑 ${queuedRuns} 次探索事件（靜默）`,'common','exploration');window.addEventLog(`補跑 ${queuedRuns} 次生產事件（靜默）`,'common','production');}}requestAnimationFrame(rafBatchLoop);}
+		const TICK_MS = 5000,
+			  CHUNK_PER_FRAME = 50;
+
+		let lastTs       = performance.now(),
+			inCatchUp    = false,
+			catchUpQueue = 0,
+			queuedRuns   = 0,
+			tickCounter  = 0,
+			btrExpireTick= 0;
+
+		const _origAddEventLog        = window.addEventLog,
+			  _origTriggerZombieEntry = window.triggerZombieEntry,
+			  _origTriggerZombieLying = window.triggerZombieLying,
+			  _origProductionAccident = window.triggerProductionAccident,
+			  _origUpdateAllDisplays  = window.updateAllDisplays,
+			  _origUpdateModalContents= window.updateModalContents;
+
+		window.addEventLog = (msg, rarity, type, apply) => {
+		  if (inCatchUp) return;
+		  _origAddEventLog(msg, rarity, type, apply);
+		};
+
+		function suppressSideEffects(){
+		  window.triggerZombieEntry        = ()=>{};
+		  window.triggerZombieLying        = ()=>{};
+		  window.triggerProductionAccident = ()=>{};
+		  window.updateAllDisplays         = ()=>{};
+		  window.updateModalContents       = ()=>{};
+		}
+
+		function restoreSideEffects(){
+		  window.triggerZombieEntry        = _origTriggerZombieEntry;
+		  window.triggerZombieLying        = _origTriggerZombieLying;
+		  window.triggerProductionAccident = _origProductionAccident;
+		  window.updateAllDisplays         = _origUpdateAllDisplays;
+		  window.updateModalContents       = _origUpdateModalContents;
+		}
+
+		function gameTick(){
+		  tickCounter++;
+		  if (tickCounter % 6 === 0) {
+			const garages = gameState.buildings.filter(b=>b&&b.type.toLowerCase()==="armoredgarage");
+			if (garages.length) {
+			  const info = BUILDINGS.armoredGarage.getUpgradeInfo(garages[0].level);
+			  if (Math.random() < info.effect.btrChance) {
+				btrExpireTick = tickCounter + 2;
+				if (!inCatchUp) triggerBTRAnimation();
+			  }
+			}
+		  }
+		  isBTRActive = tickCounter <= btrExpireTick;
+		  checkAchievements();
+		  produceResources('farming','food',1.7*TICK_MS/1000);
+		  produceResources('recycling','materials',0.5*TICK_MS/1000);
+		  produceResources('research','tech',0.2*TICK_MS/1000);
+		  produceWeaponsFromArmories();
+		  produceZombies();
+		  updateFoodConsumption();
+		  updateSafetyCenterConsumption();
+		  updateBarracksWeaponConsumption();
+		  if (gameState.allocations.exploration > 0) handleExploration();
+		  updateAllDisplays();
+		}
+
+		function rafBatchLoop(now){
+		  const delta = now - lastTs;
+
+		  if (delta >= TICK_MS && !inCatchUp){
+			const missed = Math.floor(delta / TICK_MS);
+			lastTs += missed * TICK_MS;
+			gameTick();
+			if (missed > 1){
+			  inCatchUp    = true;
+			  catchUpQueue = queuedRuns = missed - 1;
+			  suppressSideEffects();
+			}
+		  }
+
+		  if (inCatchUp){
+			const runs = Math.min(catchUpQueue, CHUNK_PER_FRAME);
+			for (let i = 0; i < runs; i++) gameTick();
+			catchUpQueue -= runs;
+			if (catchUpQueue === 0){
+			  inCatchUp = false;
+			  restoreSideEffects();
+			  _origUpdateAllDisplays();
+			  window.addEventLog(`補跑 ${queuedRuns} 次探索事件（靜默）`, 'common', 'exploration');
+			  window.addEventLog(`補跑 ${queuedRuns} 次生產事件（靜默）`, 'common', 'production');
+			}
+		  }
+
+		  requestAnimationFrame(rafBatchLoop);
+		}
+
 		requestAnimationFrame(rafBatchLoop);
 
 		document.querySelectorAll('.modal-overlay').forEach(overlay => {
