--- a/index.html
+++ b/index.html
@@ -1181,6 +1181,7 @@
 	  height: 100%;
 	  position: relative;
 	  transform: translateZ(0);
+	  will-change: transform;
 	}
 
 	.battle-log-title {
