--- a/index.html
+++ b/index.html
@@ -1120,9 +1120,6 @@
 	  background: rgba(0,0,0,0.8);
 	  z-index: 2000;
 	  display: none;  
-	  overscroll-behavior: none;
-	  touch-action: manipulation;
-	  -webkit-overflow-scrolling: touch;
 	}
 
 	.battle-container {
@@ -1134,7 +1131,7 @@
 	  height: 40vh;
 	  z-index: 2100;
 	  display: flex;
-	  flex-direction: column;
+      flex-direction: column;
 	}
 
 	.battle-header {
@@ -1158,7 +1155,6 @@
 	  display: flex;
 	  flex: none;
 	  margin: 0px;
-	  transform: translateZ(0);
 	}
 
 	.battle-half {
@@ -1167,21 +1163,16 @@
 	  overflow: hidden;
 	  position: relative;
 	  background: #000;  
-	  overscroll-behavior: none; 
-	  touch-action: manipulation; 
-	  transform: translateZ(0); 
 	}
 
 	.battle-half.left .battle-inner {
-	  transform: scaleX(-1) translateZ(0);
+	  transform: scaleX(-1);  
 	}
 
 	.battle-inner {
 	  width: 100%;
 	  height: 100%;
 	  position: relative;
-	  transform: translateZ(0);
-	  will-change: transform;
 	}
 
 	.battle-log-title {
@@ -1415,6 +1406,48 @@
 	  padding: 0 0.5em
 	}
 
+	.battle-overlay,
+	.battle-container,
+	.battle-content,
+	.battle-half,
+	.battle-half.left,
+	.battle-half.right,
+	.battle-inner,
+	.zombie-search,
+	.btr-animation,
+	.t80-animation,
+	[class*="-animation"] {
+	  transform: translate3d(0,0,0);
+	  -webkit-transform: translate3d(0,0,0);
+	  will-change: transform;
+	  backface-visibility: hidden;
+	  -webkit-backface-visibility: hidden;
+	  contain: paint layout;
+	  -webkit-perspective: 1000;
+	  perspective: 1000;
+	  -webkit-font-smoothing: antialiased;
+	}
+	.battle-half.left .battle-inner {
+	  transform: matrix3d(-1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+	}
+	.battle-overlay {
+	  isolation: isolate; 
+	  transform-style: preserve-3d;
+	  -webkit-transform-style: preserve-3d;
+	  touch-action: manipulation;
+	}
+	@supports (-webkit-overflow-scrolling: touch) {
+	  .battle-overlay,
+	  .battle-container,
+	  [class*="-animation"] {
+		-webkit-transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0);
+	  }
+	}
+	@keyframes scrollBgRight {
+	  from { transform: translateX(0); }
+	  to { transform: translateX(-1000px); }
+	}
   </style>
 </head>
 
