--- a/index.html
+++ b/index.html
@@ -3053,10 +3053,10 @@
 		{ threshold: 300, title: "鑒寶專家", level: 6 },
 		{ threshold: 500, title: "被眷顧者", level: 7 },
 		{ threshold: 666, title: "惡魔的祝福", level: 8 },
-		{ threshold: 750, title: "科學無法解釋", level: 9 },
+		{ threshold: 750, title: "這不是科學", level: 9 },
 		{ threshold: 900, title: "命運的安排", level: 10 },
-		{ threshold: 999, title: "倒立惡魔的祝福", level: 11 },
-		{ threshold: 1200, title: "這有啥稀奇的？", level: 12 }
+		{ threshold: 999, title: "倒立的惡魔", level: 11 },
+		{ threshold: 1200, title: "有啥稀奇的？", level: 12 }
 	  ],
 	  totalZombies: [
 		{ threshold: 100, title: "僵尸收容者", level: 1 },
