--- a/index.html
+++ b/index.html
@@ -3056,7 +3056,7 @@
 		{ threshold: 750, title: "這不是科學", level: 9 },
 		{ threshold: 900, title: "命運的安排", level: 10 },
 		{ threshold: 999, title: "倒立的惡魔", level: 11 },
-		{ threshold: 1200, title: "有啥稀奇的？", level: 12 }
+		{ threshold: 1200, title: "沒啥稀奇的", level: 12 }
 	  ],
 	  totalZombies: [
 		{ threshold: 100, title: "僵尸收容者", level: 1 },
